--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,40 +1,89 @@
-header  h1{
-  background-color: black;
+header {
+  background: #111;
   color: salmon;
-  height: 50px;
-  align-items: center;
-  font-size: 40px;
-  padding: 15px;
-  font-family: 'Righteous', sans-serif;
   text-align: center;
   font-style: italic;
+
+}
+
+header  h1{
+  height: 50px;
+  font-size: 45px;
+  padding: 15px;
+  font-weight: bold;
+  font-family: 'Righteous', sans-serif;
 }
 
 header nav {
   background-color: salmon;
+  width: 100%;
   padding: 10px;
-  text-align: center;
+  text-align: left;
 }
 
-body h2 {
+header nav li {
+  display: inline-block;
+}
+
+header nav li a {
+  color: #111;
+  text-decoration: none;
+}
+
+ h2 {
   font-family: 'Righteous', sans-serif;
   font-size: 20pt;
+  font-weight: bold;
+  margin-bottom: .5em;
 }
 
-body .card {
-  margin-top: 40px;
-  margin-left: 40px;
-  margin-bottom: 20px;
+table {
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
-.card ul {
-  padding: 20px;
+th {
+  background-color: rgb(126, 126, 126);
+  padding: .3em;
+  font-weight: bold;
+  color: rgb(236, 236, 236);
 }
 
-.card li {
+tbody td {
+  background-color: salmon;
+  border-style: solid;
+  border-color: black;
+  border-width: 1px;
+  padding: 8px;
+}
+
+tfoot td {
+  background-color: rgb(126, 126, 126);
+  padding: 8px;
+  color: rgb(236, 236, 236);
+
+}
+
+main {
+  margin: 2em;
+}
+
+.hero img {
+  max-width: 100%;
+  border-bottom: 2px;
+  border-color: #111;
+  border-style: solid;
+  border-width: 100%;
+}
+
+section {
+  margin-bottom: .5em;
+}
+
+section li {
   color: rgb(97, 97, 97);
   padding: 3px;
+  margin-left: 1.5em;
 }
 footer {
   background-color: rgb(168, 167, 167);
