added css to home page, added stores info to home page, added grand totals cell to sales data page

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,10 +19,12 @@ header nav {
   width: 100%;
   padding: 10px;
   text-align: left;
+  font-weight: bold;
 }
 
 header nav li {
   display: inline-block;
+  padding-left: 20px;
 }
 
 header nav li a {
@@ -66,14 +68,27 @@ tfoot td {
 
 main {
   margin: 2em;
+
 }
+
+section.hero {
+  border-block-end: solid;
+
+}
+
+section ul {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: .5em;
+}
+
+section ul li {
+  padding: 5px;
+}
+
 
 .hero img {
   max-width: 100%;
-  border-bottom: 2px;
-  border-color: #111;
-  border-style: solid;
-  border-width: 100%;
+  padding: 20px;
 }
 
 section {
@@ -93,9 +108,15 @@ footer {
   text-align: center;
   font-size: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  height: 50px;
 
 }
 
+tr > td:last-of-type {
+  background-color: rgb(126, 126, 126);
+  border: none;
+  color: rgb(236, 236, 236);
+}
 
 
 
